修复与整合